--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
             name="post"
             type="com.pinkcloud.shared.model.Post" />
-        <variable
-            name="postClickListener"
-            type="com.pinkcloud.simpleposts.ui.main.PostClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="@{() -> postClickListener.onClick(post.id)}">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/text_title"
@@ -28,8 +25,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/text_title"
-            android:text="@{post.body}"
-            android:maxLines="3"/>
+            android:text="@{post.body}"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/text_body" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
