--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,17 @@
         android:id="@+id/mainFragment"
         android:name="com.pinkcloud.simpleposts.ui.main.MainFragment"
         android:label="@string/posts"
-        tools:layout="@layout/main_fragment" />
+        tools:layout="@layout/main_fragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.pinkcloud.simpleposts.ui.detail.DetailFragment"
+        android:label="DetailFragment">
+        <argument
+            android:name="postId"
+            app:argType="integer"/>
+    </fragment>
 </navigation>
