--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -11,13 +11,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.detail.DetailFragment"
+        android:padding="24dp">
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="bold"
+            android:textSize="24sp"
             android:text="@{post.title}"/>
 
         <TextView
@@ -25,13 +29,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/text_title"
+            android:textSize="18sp"
+            android:layout_marginTop="24dp"
             android:text="@{post.body}"/>
+
+        <TextView
+            android:id="@+id/text_comment_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/text_body"
+            android:layout_marginTop="24dp"
+            android:textStyle="bold"
+            android:textSize="21sp"
+            android:text="@string/comments"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_body" />
+            app:layout_constraintTop_toBottomOf="@id/text_comment_title"
+            android:layout_marginTop="12dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
