--- a/app/src/main/res/layout/post_item_row.xml
+++ b/app/src/main/res/layout/post_item_row.xml
@@ -14,13 +14,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{() -> postClickListener.onClick(post.id)}">
+        android:onClick="@{() -> postClickListener.onClick(post.id)}"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="12dp">
 
         <TextView
             android:id="@+id/text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            android:textStyle="bold"
+            android:textSize="24sp"
             android:text="@{post.title}"/>
 
         <TextView
@@ -28,7 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/text_title"
+            android:layout_marginTop="8dp"
             android:text="@{post.body}"
+            android:ellipsize="end"
             android:maxLines="3"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
