--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,5 +21,16 @@
         <argument
             android:name="postId"
             app:argType="integer"/>
+        <action
+            android:id="@+id/action_detailFragment_to_editDialog"
+            app:destination="@id/editDialog" />
     </fragment>
+    <dialog
+        android:id="@+id/editDialog"
+        android:name="com.pinkcloud.simpleposts.ui.detail.EditDialog"
+        android:label="EditDialog" >
+        <argument
+            android:name="postId"
+            app:argType="integer"/>
+    </dialog>
 </navigation>
