rename & fix paging source

--- a/app/src/main/res/layout/comment_item_row.xml
+++ b/app/src/main/res/layout/comment_item_row.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="comment"
-            type="com.pinkcloud.shared.model.Comment" />
+            type="com.pinkcloud.data.model.Comment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
