--- a/app/src/main/res/layout/post_item_row.xml
+++ b/app/src/main/res/layout/post_item_row.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="post"
-            type="com.pinkcloud.shared.model.Post" />
+            type="com.pinkcloud.data.model.Post" />
         <variable
             name="postClickListener"
             type="com.pinkcloud.simpleposts.ui.main.PostClickListener" />
