--- a/app/src/main/res/layout/edit_dialog.xml
+++ b/app/src/main/res/layout/edit_dialog.xml
@@ -8,7 +8,7 @@
             type="com.pinkcloud.simpleposts.ui.detail.EditViewModel" />
         <variable
             name="post"
-            type="com.pinkcloud.data.model.Post" />
+            type="com.pinkcloud.domain.model.Post" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
