--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -15,70 +15,83 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.detail.DetailFragment"
-        android:padding="24dp">
+        tools:context=".ui.detail.DetailFragment">
 
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:text="@{post.title}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/button_edit"/>
-
-        <ImageButton
-            android:id="@+id/button_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@id/button_delete"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_edit"
-            android:padding="12dp"
-            android:background="?attr/colorSurface"
-            android:contentDescription="@string/edit_post"
-            android:onClick="@{() -> viewModel.onClickEdit()}"/>
-
-        <ImageButton
-            android:id="@+id/button_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/ic_delete"
-            android:padding="12dp"
-            android:background="?attr/colorSurface"
-            android:contentDescription="@string/delete_post"
-            android:onClick="@{() -> viewModel.deletePost(post)}"/>
-
-        <TextView
-            android:id="@+id/text_body"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_title"
-            android:textSize="18sp"
-            android:layout_marginTop="24dp"
-            android:text="@{post.body}"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/text_comment_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_body"
-            android:layout_marginTop="24dp"
-            android:textStyle="bold"
-            android:textSize="21sp"
-            android:text="@string/comments"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="24dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_comment_title"
-            android:layout_marginTop="12dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                <TextView
+                    android:id="@+id/text_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textStyle="bold"
+                    android:textSize="24sp"
+                    android:text="@{post.title}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/button_edit"/>
+
+                <ImageButton
+                    android:id="@+id/button_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toStartOf="@id/button_delete"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/ic_edit"
+                    android:padding="12dp"
+                    android:background="?attr/colorSurface"
+                    android:contentDescription="@string/edit_post"
+                    android:onClick="@{() -> viewModel.onClickEdit()}"/>
+
+                <ImageButton
+                    android:id="@+id/button_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:src="@drawable/ic_delete"
+                    android:padding="12dp"
+                    android:background="?attr/colorSurface"
+                    android:contentDescription="@string/delete_post"
+                    android:onClick="@{() -> viewModel.deletePost(post)}"/>
+
+                <TextView
+                    android:id="@+id/text_body"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_title"
+                    android:textSize="18sp"
+                    android:layout_marginTop="24dp"
+                    android:text="@{post.body}"/>
+
+                <TextView
+                    android:id="@+id/text_comment_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_body"
+                    android:layout_marginTop="24dp"
+                    android:textStyle="bold"
+                    android:textSize="21sp"
+                    android:text="@string/comments"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/text_comment_title"
+                    android:layout_marginTop="12dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
         <TextView
             android:id="@+id/text_error"
